--- a/about.html
+++ b/about.html
@@ -71,7 +71,7 @@
             </div>
             <div class="about-image">
                 <!-- Placeholder for image -->
-                <img src="c:\Users\Admin Media\Pictures\phone space\IMG-20250517-WA0159.jpg" alt="About Us Image">
+                <img src="IMG-20250517-WA0159.jpg" alt="About Us Image">
             </div>
         </div>
     </section>
